chore: Add missing files for responsive Privacy Policy modal overlay and Contact z-index fix

--- a/src/app/legal/privacy-policy/privacy-policy.component.scss
+++ b/src/app/legal/privacy-policy/privacy-policy.component.scss
@@ -159,6 +159,10 @@
   height: 41px;
   transition: all 0.125s ease-in-out;
 
+    & button {
+      background-color: transparent;
+    }
+
     &:hover {
         border: 2px solid $color-primary;
 
