--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -143,12 +143,14 @@ textarea::-ms-input-placeholder    { @include placeholder-style; }
 
 
 .contact-form_agreement {
+  position: relative;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     font-size: 14px;
     font-weight: 400;
     gap: 8px;
+    z-index: 20;
 }
 
 .contact-form_agreement-checkbox {
@@ -156,7 +158,7 @@ textarea::-ms-input-placeholder    { @include placeholder-style; }
     z-index: 1;
     border: none;
     border-radius: 50%;
-    background-color: $color-bg;
+    background-color: transparent;
     width: 24px;
     height: 23px;
     display: flex;
